src/App.css
body {
  background-color: #696969;
  
}

.titleBox {
  justify-content: center;
  align-items: center;
  text-align: center;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.title {
  background-color: rgba(173, 166, 166, 0.836);
  opacity: 0.9;
  width: 100%;
}

.homeContentGrid {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  align-items: center;
  text-align: center;
  width: 100%;  
  background-color: black;
  
}

.about {
  display: flex;
  flex-flow: column wrap;
  color: white;
  text-align: justify;
  justify-self: center;
  min-height: 10rem;
  /* max-width:50rem; */

}
.motto_first{
  max-width: 70vw;
  justify-self: center;
  align-self: center;
}
.motto {
  color: white;
  padding: 1rem 1rem;
  text-align: center;
  justify-self: center;
  min-height: 15rem;
 
}
.history {
  color:white;
  max-width: 50rem;
  padding: 1rem 1rem;
  text-align: justify;
  justify-self: center;
  min-height: 15rem;
}
.bio {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  align-content: center;
}
.bioContent {
  padding: 1rem;
  margin: 1rem 1rem;
  max-width: 60rem;
  height: auto;
  display: flex;
  flex-flow: column wrap;
  color: white;
}
.projectCards {
  display: flex;
  align-items: center;
 }
 .cardHead {
   justify-content: center;
   padding: 1rem;
 }
 .cardMeta {
   text-align: justify;
   justify-content: center;
   padding: 1rem;
 }

.img_HShot {
  /* float: left; */
  padding: 1rem;
  /* border-radius: 55%; */
  
}
.shortBio {
  text-align:justify;
  padding: 1rem 1rem;
  
}
.twitters {
  text-align: center;
  min-height: 40rem;
  width: auto;
  padding: 1rem;
  color: white;
}

/*Contact Page Style & Layout*/
.contact {
  display: flex;
  flex-flow: column wrap;
  padding: 1em;
  justify-content: flex-start;
  align-items: center;
  text-align: center;
  min-height: 95vh;
  margin-top: 5rem;
}
.formComponents {
  display: flex;
  justify-content: space-around;

}
.radioBtn {
  display: flex;
  justify-content: center;
  padding: 1rem;
}
.headerCont {
 margin: 2rem;
}
.socialFollows {
  padding: 1em ;
}
/* styles for the social media icons */
.twitter {
  padding: .5rem;
}
.instagram {
  padding: .5rem;
}
a.social {
  margin: 0 1rem;
  transition: transform 250ms;
  display: inline-block;
 }
 
 a.social:hover {
 transform: translateY(-2px); 
 color: chartreuse;
 }
 
 a.facebook {
 color: #4968ad;
 }
 
 a.twitter {
 color: #49a1eb;
 }
 
 a.instagram {
 color: black;
 }
 /*Services Page Layout*/
 .services{
  display: flex;
  flex-flow: column wrap;
  min-height: 50vh
 }
 .SrvHeader{
   position: absolute;
   top: 5rem;
   left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   background-image: url("https://res.cloudinary.com/cmmc/image/upload/q_auto,f_auto/v1600536040/sipnstir/tableSetting_anoade.jpg");
   background-size: cover;
   background-color: #49a1eb;
   background-repeat: no-repeat;
   width: 100%;
   min-height: 40vh;
   color: white;
 }

 .srvContent {
   display: flex;
   flex-flow: row wrap;
   min-height: 20rem;
   width: 100%;
   margin-top: 1rem;
   justify-items: center;
   align-items: center;
 }
 .srvColumn {
   height: 20rem;
   width: 50%;
   text-align: center;
   justify-self: center;
   align-self: center;
 }
 /*Email Style*/
.emailBox {
  text-align: center;
  padding: .5em;

}

a.email {
  color: white;
}

a.email:hover {
  color: chartreuse;
}

/*FAQ Page style*/
.faqs {
  height: 95vh;
  margin-top: 6rem;
  width: 100%;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.faqContainer {
  margin: 6rem 1rem;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.cardContainer {
  justify-content: center;
  
}
.faqCard {
 display: flex;
 justify-content: center;
 align-items: center;
  text-align: center;
}
.cardHead {
  justify-content: center;
  padding: 1rem;
}
.cardMeta {
  justify-content: center;
  padding: 1rem;
}
/*End Of FAQ Styles*/
/*Footer style*/
.footerFlex {
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: #294f22;
  display: flex;
  width: 100%;
  flex-flow: column wrap;
  padding: 1em;
  
}

.footerData {
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: #294f22;
  display: flex;
  width: 100%;
  flex-flow: row wrap;
  padding: 1em;
}

.footerBottom {
  display: flex;
  flex-flow: row wrap;
  color: white;
}

.mainFooter {
  
  margin: 1rem;

}
.phoneNum {
  
  padding: .5em;
}
.poweredBy {
  
  padding: .5em;
}
.bizAddress{
  padding: .5em;
}

